k8s/celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statuspage-celery
  namespace: statuspage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: statuspage
      component: celery
  template:
    metadata:
      labels:
        app: statuspage
        component: celery
    spec:
      imagePullSecrets:
      - name: ecr-secret
      containers:
      - name: celery
        image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/elad-avior-statuspage-web:latest
        command: ["celery", "-A", "statuspage", "worker", "--loglevel=info"]
        ports:
        - containerPort: 9090
          name: metrics
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
