k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statuspage-worker
  namespace: statuspage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: statuspage
      component: worker
  template:
    metadata:
      labels:
        app: statuspage
        component: worker
    spec:
      imagePullSecrets:
      - name: ecr-secret
      containers:
      - name: worker
        image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/elad-avior-statuspage-web:latest
        command: ["python", "statuspage/manage.py", "runworker"]
        ports:
        - containerPort: 9090
          name: metrics
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
