k8s/cloudwatch-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudwatch-exporter
  namespace: statuspage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudwatch-exporter
  template:
    metadata:
      labels:
        app: cloudwatch-exporter
    spec:
      containers:
      - name: cloudwatch-exporter
        image: prom/cloudwatch-exporter:cloudwatch_exporter-0.16.0
        ports:
        - containerPort: 9106
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - name: config
          mountPath: /config
        args:
        - --config.file=/config/config.yml
      volumes:
      - name: config
        configMap:
          name: cloudwatch-exporter-config
---
apiVersion: v1
kind: Service
metadata:
  name: cloudwatch-exporter
  namespace: statuspage
  labels:
    app: cloudwatch-exporter
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9106"
spec:
  ports:
  - port: 9106
    targetPort: 9106
    protocol: TCP
    name: metrics
  selector:
    app: cloudwatch-exporter
