k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: statuspage-web
  namespace: statuspage
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: statuspage
    component: web
  type: ClusterIP
